fix contrast on speaker/organizer titles

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -58,6 +58,15 @@
     border-color: $white;
     color: $accent-main;
   }
+
+  .speaker-name {
+    color: $white;
+  }
+
+  .speaker {
+    text-decoration: none;
+  }
+  
 }
 
 .fill-bright {
